--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "advent-2024-rust"
+name = "advent-2024"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+nom = "7.1.3"
 rayon = "1.10.0"
 regex = "1.11.1"
 
